# Bforartists

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  GNUmakefile  README.md  README.md.bak  appveyor.yml  bforartists_100_last.txt  build.py  create_msix.py  make.bat  make_release_output.txt  test.rtf  test.txt
.gitea/workflows/: cla.yml
.github/: FUNDING.yml  README.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: anything-else.md  bug_report.md  general.md  webpage.md
.github/workflows/: all_in_one_dir.yml  build_linux.old  build_linux.yml  c-cpp.yml  cmake-multi-platform.yml  cmake.yml  cmake_old.old  create_manual_issue.yml  linux.yml  linux_release.yml  mac.yml  main.yml  nightly-build.yml  path_test.old  path_test.yml  windows.old  windows.yml  windows_release.yml
assets/icons/: toolbar.blend
assets_bfa/: blender_assets.cats.txt
assets_bfa/brushes/: essentials_brushes-mesh_texture.blend  essentials_brushes-mesh_vertex.blend  essentials_brushes-mesh_weight.blend
assets_bfa/icons/: toolbar.blend
assets_bfa/nodes/: compositing_nodes_essentials.blend  geometry_nodes_dynamics_assets.blend  geometry_nodes_essentials.blend  principal_components.blend  procedural_hair_node_assets.blend  shading_nodes_essentials.blend
build_files/build_environment/: CMakeLists.txt  install_deps.sh  install_linux_packages.py
build_files/build_environment/cmake/: blosc.cmake  download.cmake  dpcpp.cmake  llvm.cmake  python_site_packages.cmake  rubberband.cmake  tracy.cmake  versions.cmake
build_files/build_environment/windows/: install_cuda.cmd
build_files/buildbot/: slave_compile.py  slave_pack.py
build_files/cmake/: macros.cmake  packaging.cmake
build_files/utils/: make_update.py
build_files/windows/: build_msbuild.cmd  check_libraries.cmd  configure_msbuild.cmd  parse_arguments.cmd
doc/python_api/: requirements.txt  sphinx_doc_gen.py  sphinx_stub_gen.py
intern/cycles/: CMakeLists.txt
intern/cycles/blender/: CCL_api.h  (+13 more)
intern/guardedalloc/: MEM_guardedalloc.h
intern/opensubdiv/: opensubdiv_gpu_capi.cc
locale/: languages
locale/po/: ab.po  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  ha.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  km.po  ko.po  ky.po  lt.po  ml.po  nb.po  ne.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  (+11 more)
release/: environment-macosx  environment-mswindows  environment-unix
release/darwin/: blender.applescript  bundle.sh
release/datafiles/: blender_icons_update.py  prvicons_update.py  splash.png.c  splash_template.xcf  startup.blend
release/freedesktop/: bforartists.desktop  de.bforartists.Bforartists.metainfo.xml  org.bforartists.Bforartists.metainfo.xml  org.blender.Blender.appdata.xml
release/text/: copyright.txt  readme.html
scons/: scons-LICENSE  scons-README  scons-time.py  scons.py  sconsign.py
scripts/addons/: align_view_buttons.py  animation_add_corrective_shape_key.py  bfa_align_view_buttons.py  bfa_createisocam.py  bfa_important_hotkeys.py  bfa_user_settings.py  bforartists_toolbar_settings.py  copy_global_transform.py  curve_assign_shapekey.py  curve_simplify.py  depsgraph_debug.py  development_icon_get.py  development_iskeyfree.py  edit_dimensions.py  important_hotkeys_BFA.py  io_anim_camera.py  io_export_pc2.py  io_import_BrushSet.py  io_import_images_as_planes.py  lighting_dynamic_sky.py  mesh_auto_mirror.py  mesh_bsurfaces.py  node_presets.py  object_boolean_tools.py  object_skinify.py  real_snow.py  render_auto_tile_size.py  render_freestyle_svg.py  render_ui_animation_render.py  reset3dview.py  space_clip_editor_refine_solution.py  space_view3d_3d_navigation.py  space_view3d_align_tools.py  space_view3d_copy_attributes.py  space_view3d_modifier_tools.py  system_blend_info.py  system_property_chart.py
scripts/addons_contrib/: Read Me.txt  add_dimension.py  camera_overscan.py  io_export_after_effects.py  io_import_sound_to_anim.py  io_scene_open_street_map.py  mesh_selectbuffer.py  mesh_show_vgroup_weights.py  object_creaprim.py  render_auto_save.py  space_clip_editor_autotracker.py  system_keyboard_svg.py  system_project_folder.py
scripts/addons_core/: align_view_buttons.py  bforartists_toolbar_settings.py  edit_dimensions.py  important_hotkeys_BFA.py  reset3dview.py  smartdelete_bfa.py
scripts/modules/: _bpy_types.py  addon_utils.py  bpy_types.py  nodeitems_utils.py  rna_keymap_ui.py  rna_manual_reference.py
scripts/site/: sitecustomize.py
scripts/startup/: nodeitems_builtins.py
scripts/templates_py/: ui_checkbox_prop.py  ui_checkbox_prop_saveable.py  ui_menu.py  ui_panel_simple.py
source/blender/: CMakeLists.txt
source/blender/editors/datafiles/: CMakeLists.txt
source/creator/: CMakeLists.txt  blender_launcher_win32.c  creator.cc  creator_args.c  creator_args.cc  creator_intern.h  creator_launch_win.c  creator_signals.c  creator_signals.cc
source/tools/: readme.rst
tests/: CMakeLists.txt
tests/python/: CMakeLists.txt  bl_animation_action.py  bl_animation_pose_slide.py  bl_global_undo.py  bl_imbuf_load.py  bl_imbuf_save.py  bl_node_tool.py  bl_pyapi_idprop_datablock.py  bl_usd_export_test.py  cycles_render_tests.py  eevee_render_tests.py  sequencer_render_tests.py  sequencer_video_output_tests.py
tools/check_blender_release/: check_module_enabled.py  check_module_numpy.py
tools/check_source/: check_descriptions.py  check_mypy.py  check_spelling.py
tools/reports/: weekly-report-2026-06-23.md
tools/triage/: gitea_utils.py
tools/utils/: autopep8_clean.py  blender_keyconfig_export_permutations.py  blender_merge_format_changes.py  blender_theme_as_c.py  gdb_struct_repr_c99.py  git_log_review_commits.py  git_log_review_commits_advanced.py  userpref.blend  weekly_report.py
tools/utils_api/: bpy_introspect_ui.py
tools/utils_doc/: rna_manual_reference_updater.py
tools/utils_maintenance/: autopep8_format_paths.py  blender_menu_search_coverage.py  blender_update_themes.py  c_sort_blocks.py  c_struct_clean.py  clang_format_paths.py  trailing_space_clean.py
(+7370 files in other folders)
